force-app/main/default/objects/COM_FacilityParticipant__c/COM_FacilityParticipant__c.object-meta.xml
<CustomObject>
    <description>Facility별 참여사 정보 관리</description>
    <label>Facility Participant</label>
    <nameField>
        <label>Facility Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facility Participants</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>