force-app/main/default/objects/COM_FacilityParticipant__c/fields/BDXTerm__c.field-meta.xml
<CustomField>
    <fullName>BDXTerm__c</fullName>
    <label>(X)BDX Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>