force-app/main/default/objects/COM_FacilityParticipant__c/fields/BillingCycle__c.field-meta.xml
<CustomField>
    <fullName>BillingCycle__c</fullName>
    <label>Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Separate</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>