force-app/main/default/objects/COM_FacilityParticipant__c/fields/Cedant__c.field-meta.xml
<CustomField>
    <fullName>Cedant__c</fullName>
    <description>Search용</description>
    <label>Cedant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>