force-app/main/default/objects/COM_FacilityParticipant__c/fields/CedantAccount_lk__c.field-meta.xml
<CustomField>
    <fullName>CedantAccount_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account 중 Cadent 지정(룩업필터 지정 필요)</description>
    <label>Cedant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.isInsurerAcc__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facility Participants (Cedant)</relationshipLabel>
    <relationshipName>FacilityParticipantsByCedant</relationshipName>
    <type>Lookup</type>
</CustomField>