force-app/main/default/objects/COM_FacilityParticipant__c/fields/CedantReinsurer_fm__c.field-meta.xml
<CustomField>
    <fullName>CedantReinsurer_fm__c</fullName>
    <formula>IF( CedantAccount_lk__c &lt;&gt; Null, &apos;Cedant&apos;, &apos;Reinsurer&apos;)</formula>
    <label>Cedant/Reinsurer</label>
    <type>Text</type>
</CustomField>