force-app/main/default/objects/COM_FacilityParticipant__c/fields/ClaimOffset_is__c.field-meta.xml
<CustomField>
    <fullName>ClaimOffset_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Claim Offset</label>
    <type>Checkbox</type>
</CustomField>