force-app/main/default/objects/COM_FacilityParticipant__c/fields/Facility_lk__c.field-meta.xml
<CustomField>
    <fullName>Facility_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>COM_Facility__c</referenceTo>
    <relationshipLabel>Facility Participants</relationshipLabel>
    <relationshipName>FacilityParticipantsByFacility</relationshipName>
    <type>Lookup</type>
</CustomField>