force-app/main/default/objects/COM_FacilityParticipant__c/fields/PeriodFrom__c.field-meta.xml
<CustomField>
    <fullName>PeriodFrom__c</fullName>
    <label>Period From</label>
    <type>Date</type>
</CustomField>