force-app/main/default/objects/COM_FacilityParticipant__c/fields/PeriodFrom_fm__c.field-meta.xml
<CustomField>
    <fullName>PeriodFrom_fm__c</fullName>
    <formula>IF(
ISBLANK(PeriodFrom__c ), 
&quot;&quot;,
TEXT(YEAR(PeriodFrom__c )) &amp; &quot;-&quot; &amp;
LPAD(TEXT(MONTH(PeriodFrom__c )), 2, &quot;0&quot;) &amp; &quot;-&quot; &amp;
LPAD(TEXT(DAY(PeriodFrom__c )), 2, &quot;0&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PeriodFrom(fm)</label>
    <type>Text</type>
</CustomField>