force-app/main/default/objects/COM_FacilityParticipant__c/fields/PeriodTo__c.field-meta.xml
<CustomField>
    <fullName>PeriodTo__c</fullName>
    <label>Period To</label>
    <type>Date</type>
</CustomField>