force-app/main/default/objects/COM_FacilityParticipant__c/fields/PeriodTo_fm__c.field-meta.xml
<CustomField>
    <fullName>PeriodTo_fm__c</fullName>
    <formula>IF(
ISBLANK(PeriodTo__c ), 
&quot;&quot;,
TEXT(YEAR(PeriodTo__c )) &amp; &quot;-&quot; &amp;
LPAD(TEXT(MONTH(PeriodTo__c )), 2, &quot;0&quot;) &amp; &quot;-&quot; &amp;
LPAD(TEXT(DAY(PeriodTo__c )), 2, &quot;0&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PeriodTo(fm)</label>
    <type>Text</type>
</CustomField>