force-app/main/default/objects/COM_FacilityParticipant__c/fields/Reinsurer__c.field-meta.xml
<CustomField>
    <fullName>Reinsurer__c</fullName>
    <description>Search 용</description>
    <label>Reinsurer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>