force-app/main/default/objects/COM_FacilityParticipant__c/fields/ReinsurerAccount_lk__c.field-meta.xml
<CustomField>
    <fullName>ReinsurerAccount_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account 중 Reinsurer 지정(룩업필터 지정 필요)</description>
    <label>Reinsurer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.isReinsurerAcc__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Facility Participants (Reinsurer)</relationshipLabel>
    <relationshipName>FacilityParticipantsByReinsurer</relationshipName>
    <type>Lookup</type>
</CustomField>