force-app/main/default/objects/COM_FacilityParticipant__c/fields/SharePct__c.field-meta.xml
<CustomField>
    <fullName>SharePct__c</fullName>
    <label>Share %</label>
    <precision>16</precision>
    <scale>14</scale>
    <type>Number</type>
</CustomField>