force-app/main/default/objects/COM_FacilityParticipant__c/validationRules/Change_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Active</fullName>
    <active>true</active>
    <description>Active는 승인절차를 통해서만 가능하게 제어</description>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; 
ISPICKVAL(Status__c, &apos;Active&apos;) &amp;&amp; 
NOT(ISPICKVAL(PRIORVALUE(Status__c), &apos;Active&apos;))</errorConditionFormula>
    <errorMessage>Activation is available only through an approval process.</errorMessage>
</ValidationRule>